WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215079
REGRESSION(
r259585
) Text decoration color with value currentColor miscomputed in some cases
https://bugs.webkit.org/show_bug.cgi?id=215079
Summary
REGRESSION(r259585) Text decoration color with value currentColor miscomputed...
Antti Koivisto
Reported
2020-08-03 05:30:18 PDT
Special casing when used with '-webkit-text-fill-color' property is broken.
Attachments
patch
(6.52 KB, patch)
2020-08-03 05:45 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(6.62 KB, patch)
2020-08-03 05:50 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(5.87 KB, patch)
2020-08-03 06:52 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(5.99 KB, patch)
2020-08-03 07:02 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(7.14 KB, patch)
2020-08-03 07:43 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2020-08-03 05:30:52 PDT
<
rdar://64957777
>
Antti Koivisto
Comment 2
2020-08-03 05:45:15 PDT
Created
attachment 405822
[details]
patch
Antti Koivisto
Comment 3
2020-08-03 05:50:10 PDT
Created
attachment 405823
[details]
patch
Antti Koivisto
Comment 4
2020-08-03 06:52:46 PDT
Created
attachment 405824
[details]
patch
Antti Koivisto
Comment 5
2020-08-03 07:02:52 PDT
Created
attachment 405825
[details]
patch
Antti Koivisto
Comment 6
2020-08-03 07:43:09 PDT
Created
attachment 405828
[details]
patch
EWS
Comment 7
2020-08-03 09:18:27 PDT
Committed
r265198
: <
https://trac.webkit.org/changeset/265198
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405828
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug