REGRESSION(r259585) Text decoration color with value currentColor miscomputed in some cases https://bugs.webkit.org/show_bug.cgi?id=215079

Reviewed by Zalan Bujtas.

Source/WebCore:

r259585 did some refactoring that broke a special case where text decoration color comes from
'-webkit-text-fill-color' property.

Test: fast/text/text-decoration-currentcolor-fill-color.html

* rendering/TextDecorationPainter.cpp:
(WebCore::TextDecorationPainter::decorationColor):

Move resolving currentColor to RenderStyle.

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::colorResolvingCurrentColor const):

Handle CSSPropertyTextDecorationColor as a special case here.

(WebCore::RenderStyle::visitedDependentColor const):

LayoutTests:

* fast/text/text-decoration-currentcolor-fill-color-expected.html: Added.
* fast/text/text-decoration-currentcolor-fill-color.html: Added.


Canonical link: https://commits.webkit.org/227884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265198 268f45cc-cd09-0410-ab3c-d52691b4dbfc